    windows/threads, to make 100% sure that we find and close them all,
    avoiding leftover threads that cause the script not to exit.
    (LP: #1237199)

  [ Jeff Marcom ]
  * scripts/network - added iperf test benchmark testing capabilities. 
 
  [ Taihsiang Ho ]
  * checkbox-old/jobs/keys.txt.in - added keys/lock-screen job to test
    lock screen key.

 -- Taihsiang Ho <taihsiang.ho@canonical.com>  Mon, 14 Oct 2013 17:35:23 -0400

checkbox (0.16.12) saucy; urgency=low

  [ Daniel Manrique ]
  * scripts/gpu_test: Better validation that glxgears windows were found, to
    avoid manipulation of nonexisting windows which causes threads to crash
    and the entire program to stall. (LP: #1232232)
  * parsers/udevadm: Added additional heuristics for mediatek bluetooth
    controllers (LP: #1210405)

  [ Brendan Donegan ] 
  * scripts/virtualization - change kvm command to qemu-system-x86_64 as the 
    former is deprecated (LP: #1224854)
  * scripts/memory_test - use per-process memory limit if arch is ARM, except
    for arm64 (LP: #1184688)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 20 Sep 2013 16:10:13 +0100

checkbox (0.16.11) saucy; urgency=low

  [ Daniel Manrique ]
  * scripts/pm_test, scripts/fwts_test: Removed dmesg_common that's no longer
    present in fwts and added specific version dependency to checkbox
    (LP: #1206016)
  * Removed references to Ubuntu Friendly due to sunsetting of the project.
    (LP: #1224533)
  * Ensured that pactl commands are run on a properly unlocalized environment
    (LP: #1201126)
  * scripts/fwts_test: Updated list of fwts tests to run, based on FWTS team
    recommendations (LP: #1228168)
  
  [ Jeff Lane ]
  * scripts/storage_test: test now exits with a warning if the drive is not
    mounted prior to testing (LP: #1224820)

  [ Brendan Donegan ]
  * scripts/fwts_test: Removed dmi_decode and smbios tests that are no longer present